tests/neg/main-annotation-nonstatic.scala
class myMain extends main

class A:
  @main def foo(bar: Int) = () // error
  @myMain def baz() = () // error